# baysean

./: baysean.py  classifier.py  eda.py  german_credit_data_preprocessed.csv  modelo.stan  pyproject.toml  script.sql
