[project]
name = "baysean"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "ipykernel==6.9.1",
    "kagglehub>=0.3.6",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "pytensor>=2.20.0",
    "pymc>=5.15.0",
    "cython>=3.0.11",
]
