[project]
name = "baysean"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel==6.9.1",
    "ipywidgets>=8.1.5",
    "lightgbm>=4.5.0",
    "pymc>=5.20.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
    "tqdm>=4.67.1",
]
